--- a/css/manual.css
+++ b/css/manual.css
@@ -16,10 +16,21 @@ Background CSS
 
 
 /* ========== ========== ==========
-Nioh 2 Manual CSS
+Global CSS
 ========== ========== ========== */
 .mask {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5), inset 0 1px 0 0 rgba(255, 255, 255, 0.16);
+}
+
+table {
+    overflow-x: auto;
+}
+
+th, td {
+    padding: 0.6em;
+    border: 1px solid #1c1917;
+    border-collapse: collapse;
+    text-align: center;
 }
 
 .footer-border {
