--- a/css/manual.css
+++ b/css/manual.css
@@ -36,3 +36,23 @@ th, td {
 .footer-border {
     border: solid 1px rgba(49, 45, 51, 0.64);
 }
+
+/* 
+========== ========== ========== ========== ==========
+Back to top button CSS 
+========== ========== ========== ========== ==========
+*/
+#back-to-top-button {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 25px;
+    margin-bottom: 1em;
+    padding: 0.75em 1.5em;
+
+    text-align: center;
+    font-size: 16px;
+    background-color: rgba(255, 193, 7, 255);
+    color: black;
+    border-radius: 0.25em;
+}
