Added more content to martial_arts.html. Removed gouging_star_2, and ill_wind_2 .png files.

--- a/css/output.css
+++ b/css/output.css
@@ -734,6 +734,14 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .border {
   border-width: 1px;
 }
