--- a/css/output.css
+++ b/css/output.css
@@ -513,10 +513,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -527,10 +523,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
 }
 
 .z-10 {
@@ -552,12 +544,24 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
 }
 
 .mt-4 {
@@ -570,26 +574,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
-.mb-32 {
-  margin-bottom: 8rem;
 }
 
 .block {
@@ -685,10 +669,6 @@ video {
 
 .list-disc {
   list-style-type: disc;
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1067,16 +1047,16 @@ video {
     height: 660px;
   }
 
-  .md\:w-full {
-    width: 100%;
+  .md\:h-auto {
+    height: auto;
+  }
+
+  .md\:h-\[510px\] {
+    height: 510px;
   }
 
   .md\:w-11\/12 {
     width: 91.666667%;
-  }
-
-  .md\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .md\:grid-cols-2 {
@@ -1090,40 +1070,15 @@ video {
   .md\:gap-3 {
     gap: 0.75rem;
   }
-
-  .md\:gap-6 {
-    gap: 1.5rem;
-  }
-
-  .md\:gap-8 {
-    gap: 2rem;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:my-0 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
 
-  .lg\:mb-\[200px\] {
-    margin-bottom: 200px;
-  }
-
   .lg\:mt-0 {
     margin-top: 0px;
-  }
-
-  .lg\:mt-12 {
-    margin-top: 3rem;
-  }
-
-  .lg\:mt-28 {
-    margin-top: 7rem;
   }
 
   .lg\:block {
@@ -1142,16 +1097,8 @@ video {
     height: 100vh;
   }
 
-  .lg\:h-\[660px\] {
-    height: 660px;
-  }
-
   .lg\:w-1\/2 {
     width: 50%;
-  }
-
-  .lg\:w-\[1320px\] {
-    width: 1320px;
   }
 
   .lg\:w-fit {
@@ -1159,32 +1106,12 @@ video {
     width: fit-content;
   }
 
-  .lg\:w-full {
-    width: 100%;
-  }
-
-  .lg\:w-10\/12 {
-    width: 83.333333%;
-  }
-
-  .lg\:w-11\/12 {
-    width: 91.666667%;
-  }
-
   .lg\:max-w-section-width {
     max-width: 1632px;
   }
 
-  .lg\:max-w-\[600px\] {
-    max-width: 600px;
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -1209,18 +1136,6 @@ video {
 @media (min-width: 1536px) {
   .\32xl\:grid {
     display: grid;
-  }
-
-  .\32xl\:w-full {
-    width: 100%;
-  }
-
-  .\32xl\:w-\[430px\] {
-    width: 430px;
-  }
-
-  .\32xl\:w-8\/12 {
-    width: 66.666667%;
   }
 
   .\32xl\:w-9\/12 {
